# fastapi_dados_mockados

./: .gitignore  README.md  main.py  pyproject.toml  test_api.py  test_spark.py
data_output/: sales_data.csv
data_output/sales_data.parquet/: .part-00000-739f3688-b843-44a8-91fc-2c6fe76d46f0-c000.snappy.parquet.crc  part-00000-739f3688-b843-44a8-91fc-2c6fe76d46f0-c000.snappy.parquet
