[tool.poetry]
name = "api-fastapi"
version = "0.1.0"
description = ""
authors = ["AninhaBe <contato.anabeatrizoliver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
pandas = "^2.3.3"
jmespath = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.119.0"}
uvicorn = "^0.37.0"
dbldatagen = "^0.4.0.post1"
pyspark = "^4.0.1"
pyparsing = "^3.2.5"
requests = "^2.32.5"
findspark = "^2.0.1"
faker = "^37.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
